@@ -1,19 +1,23 @@
 package com.skyfalling.mosika.ui.web.service;
 
-import com.skyfalling.mosika.ui.web.common.BusinessException;
-import com.skyfalling.mosika.ui.web.dao.FlowRuleRefDao;
-import com.skyfalling.mosika.ui.web.dao.RuleDefinitionDao;
-import com.skyfalling.mosika.ui.web.dao.RuleFlowDao;
-import com.skyfalling.mosika.ui.web.entity.RuleDefinitionEntity;
-import com.skyfalling.mosika.ui.web.entity.RuleFlowEntity;
-import com.skyfalling.mosika.ui.web.service.RuleTreeCompiler.CompileResult;
 import com.skyfalling.mosika.ui.tree.node.TreeNode;
+import com.skyfalling.mosika.ui.web.common.BusinessException;
+import com.skyfalling.mosika.ui.web.common.RuleIds;
+import com.skyfalling.mosika.ui.web.dao.AtomicRuleDao;
+import com.skyfalling.mosika.ui.web.dao.FlowReferenceDao;
+import com.skyfalling.mosika.ui.web.dao.RuleFlowDao;
+import com.skyfalling.mosika.ui.web.dao.RuleNamespaceDao;
+import com.skyfalling.mosika.ui.web.entity.AtomicRuleEntity;
+import com.skyfalling.mosika.ui.web.entity.RuleFlowEntity;
+import com.skyfalling.mosika.ui.web.entity.RuleNamespaceEntity;
+import com.skyfalling.mosika.ui.web.service.RuleTreeCompiler.CompileResult;
 import com.skyfalling.mosika.utils.Constants;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.HashSet;
+import java.util.HashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -21,8 +25,10 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 /**
- * {@code rule_flow} 层的业务操作：保存前先由 {@link RuleTreeCompiler} 校验/规范化 UI 树，
- * 校验通过后落库、重建 {@code flow_rule_ref}，并触发 {@link RuleSuiteManager} 重建。
+ * 规则流业务服务
+ * <p>
+ * 负责规则树规范化、引用类型和命名空间校验、引用索引重建以及全局 RuleSuite 刷新
+ * 命名空间约束只存在于本服务，不传入 Core
  *
  * @author skyfalling {@literal <skyfalling@live.com>}
  */
@@ -30,244 +36,310 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class RuleFlowService {
 
-    private final RuleFlowDao flowDao;
-    private final RuleDefinitionDao ruleDao;
-    private final FlowRuleRefDao refDao;
-    private final RuleSuiteManager suiteManager;
-
-    /** rule_flow.status 取值。 */
+    /** 草稿状态 */
     public static final int DRAFT = 0;
-    public static final int PUBLISHED = 1;
-    public static final int DISABLED = 2;
 
-    private static final Set<String> BUILTIN_REFERENCES = Set.of(
-            Constants.TRUE, Constants.FALSE, Constants.NULL, Constants.NOP);
+    /** 已生效状态 */
+    public static final int PUBLISHED = 1;
+
+    /** 条件位置允许的内置引用 */
     private static final Set<String> CONDITION_BUILTINS = Set.of(
             Constants.TRUE, Constants.FALSE, Constants.NULL);
+
+    /** 动作位置允许的内置引用 */
     private static final Set<String> ACTION_BUILTINS = Set.of(Constants.NOP);
 
-    /** 新建：始终落为草稿（不校验语义、不进运行态）。 */
+    /** 规则流持久化访问对象 */
+    private final RuleFlowDao flowDao;
+
+    /** 原子规则持久化访问对象 */
+    private final AtomicRuleDao atomicRuleDao;
+
+    /** 两类规则流引用索引 */
+    private final FlowReferenceDao referenceDao;
+
+    /** 命名空间持久化访问对象 */
+    private final RuleNamespaceDao namespaceDao;
+
+    /** 全局运行态规则套件管理器 */
+    private final RuleSuiteManager suiteManager;
+
+    /** 新建规则流并始终保存为草稿 */
     @Transactional
-    public RuleFlowEntity create(RuleFlowEntity req) {
-        basicCheck(req);
-        req.setRuleTree(RuleTreeCompiler.canonicalizeLenient(req.getRuleTree()));
-        req.setStatus(DRAFT);
-        long id = flowDao.insert(req);
-        refDao.replaceForFlow(id, java.util.Collections.emptySet());
-        return flowDao.findById(id);
+    public RuleFlowEntity create(RuleFlowEntity request) {
+        basicCheck(request);
+        RuleNamespaceEntity namespace = requireNamespace(request.getNamespace());
+        request.setNamespaceId(namespace.getId());
+        request.setNamespace(namespace.getCode());
+        request.setRuleTree(RuleTreeCompiler.canonicalizeLenient(request.getRuleTree()));
+        request.setStatus(DRAFT);
+        request.setId(flowDao.insert(request));
+        referenceDao.replaceForFlow(request.getId(), Set.of(), Set.of());
+        return flowDao.findByFlowId(request.getFlowId());
     }
 
-    /**
-     * 保存草稿：不做结构/编译校验，仅规范化 JSON；强制 status=草稿（PUT 无法发布）。
-     * 若原为已生效，转草稿后从运行态移除（refresh 只装载 published）。
-     */
+    /** 保存草稿并从运行态移除原生效版本 */
     @Transactional
-    public RuleFlowEntity saveDraft(long id, RuleFlowEntity req) {
-        RuleFlowEntity existing = requireFlow(id);
-        if (req.getVersion() == null) {
-            throw new IllegalArgumentException("version is required for update (expected " + existing.getVersion() + ")");
+    public RuleFlowEntity saveDraft(String flowId, RuleFlowEntity request) {
+        RuleFlowEntity existing = requireFlow(flowId);
+        boolean loadedByRuntime = referenceDao.runtimeFlowIds().contains(existing.getId());
+        requireVersion(request, existing, "update");
+        basicCheck(request);
+        assertNamespaceUnchanged(request.getNamespace(), existing.getNamespace());
+        copyIdentity(request, existing);
+        request.setStatus(DRAFT);
+        request.setRuleTree(RuleTreeCompiler.canonicalizeLenient(request.getRuleTree()));
+        if (flowDao.update(flowId, request) == 0) {
+            throw conflict(request.getVersion());
         }
-        basicCheck(req);
-        req.setId(id);
-        req.setStatus(DRAFT);
-        req.setRuleTree(RuleTreeCompiler.canonicalizeLenient(req.getRuleTree()));
-        int rows = flowDao.update(req);
-        if (rows == 0) {
-            throw new BusinessException(409, "flow updated by others, please retry (expected version=" + req.getVersion() + ")");
-        }
-        // 草稿不进运行态：清空引用（活跃引用检查按 status=1 过滤，草稿本就不计入）。
-        refDao.replaceForFlow(id, java.util.Collections.emptySet());
-        if (existing.getStatus() != null && existing.getStatus() == PUBLISHED) {
+        referenceDao.replaceForFlow(existing.getId(), Set.of(), Set.of());
+        if (loadedByRuntime) {
             suiteManager.refreshAfterCommit();
         }
-        return flowDao.findById(id);
+        return flowDao.findByFlowId(flowId);
     }
 
-    /** 仅编辑元数据（名称/描述），不改树与状态、不触发运行态刷新。 */
+    /** 仅更新规则流名称和描述 */
     @Transactional
-    public RuleFlowEntity updateMeta(long id, RuleFlowEntity req) {
-        RuleFlowEntity existing = requireFlow(id);
-        if (req.getVersion() == null) {
-            throw new IllegalArgumentException("version is required for update (expected " + existing.getVersion() + ")");
-        }
-        if (req.getName() == null || req.getName().isBlank()) {
+    public RuleFlowEntity updateMeta(String flowId, RuleFlowEntity request) {
+        RuleFlowEntity existing = requireFlow(flowId);
+        requireVersion(request, existing, "update");
+        if (request.getName() == null || request.getName().isBlank()) {
             throw new IllegalArgumentException("flow name is required");
         }
-        int rows = flowDao.updateMeta(id, req.getName(), req.getDescription(), req.getVersion());
-        if (rows == 0) {
-            throw new BusinessException(409, "flow updated by others, please retry (expected version=" + req.getVersion() + ")");
+        assertNamespaceUnchanged(request.getNamespace(), existing.getNamespace());
+        if (flowDao.updateMeta(flowId, request.getName(), request.getDescription(), request.getVersion()) == 0) {
+            throw conflict(request.getVersion());
         }
-        return flowDao.findById(id);
+        return flowDao.findByFlowId(flowId);
     }
 
-    /**
-     * 生效：全量校验+编译，通过后以规范 JSON 落库、status=已生效、重建引用并发布进 RuleSuite。
-     */
+    /** 全量校验并发布规则流 */
     @Transactional
-    public RuleFlowEntity publish(long id, RuleFlowEntity req) {
-        RuleFlowEntity existing = requireFlow(id);
-        if (req.getVersion() == null) {
-            throw new IllegalArgumentException("version is required for publish (expected " + existing.getVersion() + ")");
+    public RuleFlowEntity publish(String flowId, RuleFlowEntity request) {
+        RuleFlowEntity existing = requireFlow(flowId);
+        requireVersion(request, existing, "publish");
+        basicCheck(request);
+        assertNamespaceUnchanged(request.getNamespace(), existing.getNamespace());
+        CompileResult compiled = RuleTreeCompiler.compile(request.getRuleTree());
+        VerifiedReferences references = verifyReferences(compiled, existing.getNamespaceId());
+        copyIdentity(request, existing);
+        request.setStatus(PUBLISHED);
+        request.setRuleTree(compiled.getCanonicalJson());
+        if (flowDao.update(flowId, request) == 0) {
+            throw conflict(request.getVersion());
         }
-        basicCheck(req);
-        CompileResult compiled = RuleTreeCompiler.compile(req.getRuleTree());
-        Set<Long> refIds = verifyReferences(compiled);
-        req.setId(id);
-        req.setStatus(PUBLISHED);
-        req.setRuleTree(compiled.getCanonicalJson());
-        int rows = flowDao.update(req);
-        if (rows == 0) {
-            throw new BusinessException(409, "flow updated by others, please retry (expected version=" + req.getVersion() + ")");
-        }
-        refDao.replaceForFlow(id, refIds);
+        referenceDao.replaceForFlow(existing.getId(),
+                references.ruleDatabaseIds(), references.flowDatabaseIds());
         suiteManager.refreshAfterCommit();
-        return flowDao.findById(id);
+        return flowDao.findByFlowId(flowId);
     }
 
+    /** 停用规则流 */
     @Transactional
-    public void disable(long id, long expectedVersion) {
-        RuleFlowEntity existing = requireFlow(id);
-        int rows = flowDao.disable(id, expectedVersion);
-        if (rows == 0) {
+    public void disable(String flowId, long expectedVersion) {
+        RuleFlowEntity existing = requireFlow(flowId);
+        if (flowDao.disable(flowId, expectedVersion) == 0) {
             throw new BusinessException(409, "flow updated by others, please retry");
         }
-        // 停用不清引用表，仅在启用集合中"生效引用"过滤时通过 f.status=1 剔除
         if (existing.getStatus() != null && existing.getStatus() == PUBLISHED) {
             suiteManager.refreshAfterCommit();
         }
     }
 
-    public RuleFlowEntity findById(long id) {
-        return flowDao.findById(id);
+    /** 按 flowId 查询规则流 */
+    public RuleFlowEntity findByFlowId(String flowId) {
+        return flowDao.findByFlowId(flowId);
     }
 
-    public java.util.Map<String, Object> page(Integer status, String keyword,
-                                              int pageNumber, int pageSize) {
-        int p = Math.max(pageNumber, 1);
-        int s = Math.max(1, Math.min(pageSize, 200));
-        long offset = (long) (p - 1) * s;
-        List<RuleFlowEntity> rows = flowDao.list(status, keyword, offset, s);
+    /** 分页查询规则流 */
+    public Map<String, Object> page(Integer status, String namespace, String keyword,
+                                    int pageNumber, int pageSize) {
+        int page = Math.max(pageNumber, 1);
+        int size = Math.max(1, Math.min(pageSize, 200));
+        long offset = (long) (page - 1) * size;
+        List<RuleFlowEntity> rows = flowDao.list(status, namespace, keyword, offset, size);
         rows.forEach(this::attachListSummary);
-        int total = flowDao.count(status, keyword);
-        return java.util.Map.of(
-                "items", rows,
-                "total", total,
-                "pageNumber", p,
-                "pageSize", s);
+        int total = flowDao.count(status, namespace, keyword);
+        return Map.of("items", rows, "total", total, "pageNumber", page, "pageSize", size);
     }
 
-    /** 列表只返回绘制摘要；完整 ruleTree 由详情接口按需加载，避免每页重复传输和解析大 JSON。 */
+    /** 查询编辑器使用的轻量启用规则流索引 */
+    public List<Map<String, Object>> activeReferences(String namespace) {
+        return flowDao.listActive(AtomicRuleService.normalizeNamespace(namespace)).stream()
+                .map(flow -> Map.<String, Object>of(
+                        "flowId", flow.getFlowId(),
+                        "name", flow.getName(),
+                        "description", flow.getDescription(),
+                        "namespace", flow.getNamespace()))
+                .toList();
+    }
+
+    /** 保存前试算并返回规范 JSON、DSL 和两类引用 */
+    public Map<String, Object> dryRun(String ruleTree, String namespace) {
+        RuleNamespaceEntity scope = requireNamespace(namespace);
+        CompileResult compiled = RuleTreeCompiler.compile(ruleTree);
+        VerifiedReferences references = verifyReferences(compiled, scope.getId());
+        Map<String, Object> result = new HashMap<>();
+        result.put("canonicalJson", compiled.getCanonicalJson());
+        result.put("dsl", compiled.getDsl());
+        result.put("referencedAtomicRuleIds", references.externalRuleIds());
+        result.put("referencedFlowIds", references.externalFlowIds());
+        return result;
+    }
+
+    /** 为列表实体附加节点数和引用摘要 */
     private void attachListSummary(RuleFlowEntity flow) {
         TreeNode tree = TreeNode.fromJson(flow.getRuleTree());
         int[] nodes = {0};
         tree.visit((node, ignored) -> nodes[0]++, null);
         List<String> referenced = tree.collect().stream()
-                .filter(value -> value.chars().allMatch(Character::isDigit))
+                .filter(RuleFlowService::isBusinessId)
                 .toList();
         flow.setNodeCount(nodes[0]);
         flow.setReferencedRuleIds(referenced);
         flow.setRuleTree(null);
     }
 
-    /** 试算：校验并回吐规范 JSON、DSL、引用集合，不落库；供前端"保存前校验"使用。 */
-    public java.util.Map<String, Object> dryRun(String ruleTree) {
-        CompileResult compiled = RuleTreeCompiler.compile(ruleTree);
-        Set<Long> refIds = verifyReferences(compiled);
-        return java.util.Map.of(
-                "canonicalJson", compiled.getCanonicalJson(),
-                "dsl", compiled.getDsl(),
-                "referencedRuleIds", refIds);
-    }
-
-    private RuleFlowEntity requireFlow(long id) {
-        RuleFlowEntity e = flowDao.findById(id);
-        if (e == null) {
-            throw new BusinessException(404, "flow not found: " + id);
-        }
-        return e;
-    }
-
-    private void basicCheck(RuleFlowEntity req) {
-        if (req.getName() == null || req.getName().isBlank()) {
-            throw new IllegalArgumentException("flow name is required");
-        }
-        if (req.getRuleTree() == null || req.getRuleTree().isBlank()) {
-            throw new IllegalArgumentException("ruleTree is required");
-        }
-    }
-
-    /**
-     * 引用完整性：持久化引用必须是启用中的数字型规则 ID，只有内核常量允许使用非数字表达式；
-     * 同时校验条件/动作位置与规则定义的 {@code ruleKind} 一致。
-     * 返回本次 flow 需要写入 {@code flow_rule_ref} 的数字型 rule id 集合。
-     */
-    private Set<Long> verifyReferences(CompileResult compiled) {
-        Set<Long> numeric = new HashSet<>();
-        Set<String> unsupported = new HashSet<>();
-        for (String s : compiled.getReferenced()) {
-            try {
-                numeric.add(Long.parseLong(s));
-            } catch (NumberFormatException nfe) {
-                if (!BUILTIN_REFERENCES.contains(s)) {
-                    unsupported.add(s);
-                }
-            }
-        }
-        if (!unsupported.isEmpty()) {
+    /** 校验所有引用的类型、状态、规则分类和命名空间 */
+    private VerifiedReferences verifyReferences(CompileResult compiled, long namespaceId) {
+        Set<String> invalidConditions = compiled.getConditionReferenced().stream()
+                .filter(ref -> !CONDITION_BUILTINS.contains(ref))
+                .filter(ref -> !RuleIds.isRuleId(ref))
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+        Set<String> invalidActions = compiled.getActionReferenced().stream()
+                .filter(ref -> !ACTION_BUILTINS.contains(ref))
+                .filter(ref -> !RuleIds.isRuleId(ref) && !RuleIds.isFlowId(ref))
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+        if (!invalidConditions.isEmpty() || !invalidActions.isEmpty()) {
             throw new BusinessException(400,
-                    "ruleTree references must use numeric rule ids; unsupported refs: " + unsupported);
-        }
-        Set<String> invalidConditionBuiltins = nonNumericOutside(
-                compiled.getConditionReferenced(), CONDITION_BUILTINS);
-        Set<String> invalidActionBuiltins = nonNumericOutside(
-                compiled.getActionReferenced(), ACTION_BUILTINS);
-        if (!invalidConditionBuiltins.isEmpty() || !invalidActionBuiltins.isEmpty()) {
-            throw new BusinessException(400,
-                    "built-in reference does not match node position; condition refs="
-                            + invalidConditionBuiltins + ", action refs=" + invalidActionBuiltins);
-        }
-        if (numeric.isEmpty()) {
-            return numeric;
-        }
-        List<RuleDefinitionEntity> found = ruleDao.findByIds(numeric);
-        Map<Long, RuleDefinitionEntity> foundById = found.stream()
-                .collect(Collectors.toMap(RuleDefinitionEntity::getId, Function.identity()));
-        Set<Long> foundActive = foundById.values().stream()
-                .filter(r -> r.getStatus() != null && r.getStatus() == 1)
-                .map(RuleDefinitionEntity::getId)
-                .collect(Collectors.toSet());
-        Set<Long> missing = new HashSet<>(numeric);
-        missing.removeAll(foundActive);
-        if (!missing.isEmpty()) {
-            throw new BusinessException(400,
-                    "ruleTree references unknown or disabled rule ids: " + missing);
+                    "unsupported references; condition refs=" + invalidConditions + ", action refs=" + invalidActions);
         }
 
-        Set<Long> wrongConditionKind = numericReferences(compiled.getConditionReferenced()).stream()
-                .filter(id -> !"condition".equals(foundById.get(id).getRuleKind()))
-                .collect(Collectors.toSet());
-        Set<Long> wrongActionKind = numericReferences(compiled.getActionReferenced()).stream()
-                .filter(id -> !"action".equals(foundById.get(id).getRuleKind()))
-                .collect(Collectors.toSet());
+        Set<String> ruleIds = compiled.getReferenced().stream()
+                .filter(RuleIds::isRuleId)
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+        Set<String> flowIds = compiled.getReferenced().stream()
+                .filter(RuleIds::isFlowId)
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+
+        Map<String, AtomicRuleEntity> atomics = atomicRuleDao.findByRuleIds(ruleIds).stream()
+                .collect(Collectors.toMap(AtomicRuleEntity::getRuleId, Function.identity()));
+        Map<String, RuleFlowEntity> flows = flowDao.findByFlowIds(flowIds).stream()
+                .collect(Collectors.toMap(RuleFlowEntity::getFlowId, Function.identity()));
+
+        Set<String> unavailableAtomics = ruleIds.stream()
+                .filter(ref -> !isActiveInNamespace(atomics.get(ref), namespaceId))
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+        Set<String> unavailableFlows = flowIds.stream()
+                .filter(ref -> !isPublishedInNamespace(flows.get(ref), namespaceId))
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+        if (!unavailableAtomics.isEmpty() || !unavailableFlows.isEmpty()) {
+            throw new BusinessException(400,
+                    "references must exist, be active and use the same namespace; atomic refs="
+                            + unavailableAtomics + ", flow refs=" + unavailableFlows);
+        }
+
+        Set<String> wrongConditionKind = compiled.getConditionReferenced().stream()
+                .filter(RuleIds::isRuleId)
+                .filter(ref -> !"condition".equals(atomics.get(ref).getKind()))
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+        Set<String> wrongActionKind = compiled.getActionReferenced().stream()
+                .filter(RuleIds::isRuleId)
+                .filter(ref -> !"action".equals(atomics.get(ref).getKind()))
+                .collect(Collectors.toCollection(LinkedHashSet::new));
         if (!wrongConditionKind.isEmpty() || !wrongActionKind.isEmpty()) {
             throw new BusinessException(400,
                     "rule kind does not match node position; condition refs=" + wrongConditionKind
                             + ", action refs=" + wrongActionKind);
         }
-        return foundActive;
+        Set<Long> ruleDatabaseIds = atomics.values().stream()
+                .map(AtomicRuleEntity::getId)
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+        Set<Long> flowDatabaseIds = flows.values().stream()
+                .map(RuleFlowEntity::getId)
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+        return new VerifiedReferences(ruleIds, flowIds, ruleDatabaseIds, flowDatabaseIds);
     }
 
-    private Set<Long> numericReferences(Set<String> references) {
-        return references.stream()
-                .filter(value -> value.chars().allMatch(Character::isDigit))
-                .map(Long::parseLong)
-                .collect(Collectors.toSet());
+    /** 判断原子规则是否启用且属于指定命名空间 */
+    private static boolean isActiveInNamespace(AtomicRuleEntity rule, long namespaceId) {
+        return rule != null && rule.getStatus() != null && rule.getStatus() == 1
+                && rule.getNamespaceId() != null && rule.getNamespaceId() == namespaceId;
     }
 
-    private Set<String> nonNumericOutside(Set<String> references, Set<String> allowed) {
-        return references.stream()
-                .filter(value -> !value.chars().allMatch(Character::isDigit))
-                .filter(value -> !allowed.contains(value))
-                .collect(Collectors.toSet());
+    /** 判断规则流是否已发布且属于指定命名空间 */
+    private static boolean isPublishedInNamespace(RuleFlowEntity flow, long namespaceId) {
+        return flow != null && flow.getStatus() != null && flow.getStatus() == PUBLISHED
+                && flow.getNamespaceId() != null && flow.getNamespaceId() == namespaceId;
+    }
+
+    /** 判断是否为 Web 业务引用 ID */
+    private static boolean isBusinessId(String value) {
+        return RuleIds.isRuleId(value) || RuleIds.isFlowId(value);
+    }
+
+    /** 查询必须存在的规则流 */
+    private RuleFlowEntity requireFlow(String flowId) {
+        RuleFlowEntity flow = flowDao.findByFlowId(flowId);
+        if (flow == null) {
+            throw new BusinessException(404, "flow not found: " + flowId);
+        }
+        return flow;
+    }
+
+    /** 查询必须存在且启用的命名空间 */
+    private RuleNamespaceEntity requireNamespace(String code) {
+        String normalized = AtomicRuleService.normalizeNamespace(code);
+        RuleNamespaceEntity namespace = namespaceDao.findByCode(normalized);
+        if (namespace == null || namespace.getStatus() == null || namespace.getStatus() != 1) {
+            throw new BusinessException(400, "unknown or disabled namespace: " + normalized);
+        }
+        return namespace;
+    }
+
+    /** 校验规则流基础字段 */
+    private static void basicCheck(RuleFlowEntity request) {
+        if (request.getName() == null || request.getName().isBlank()) {
+            throw new IllegalArgumentException("flow name is required");
+        }
+        if (request.getRuleTree() == null || request.getRuleTree().isBlank()) {
+            throw new IllegalArgumentException("ruleTree is required");
+        }
+    }
+
+    /** 拷贝不可变身份和命名空间字段 */
+    private static void copyIdentity(RuleFlowEntity request, RuleFlowEntity existing) {
+        request.setId(existing.getId());
+        request.setNamespaceId(existing.getNamespaceId());
+        request.setNamespace(existing.getNamespace());
+    }
+
+    /** 校验请求版本 */
+    private static void requireVersion(RuleFlowEntity request, RuleFlowEntity existing, String operation) {
+        if (request.getVersion() == null) {
+            throw new IllegalArgumentException(
+                    "version is required for " + operation + " (expected " + existing.getVersion() + ")");
+        }
+    }
+
+    /** 创建乐观锁冲突异常 */
+    private static BusinessException conflict(long version) {
+        return new BusinessException(409,
+                "flow updated by others, please retry (expected version=" + version + ")");
+    }
+
+    /** 规则流创建后不允许改变命名空间 */
+    private static void assertNamespaceUnchanged(String requested, String existing) {
+        if (requested != null && !requested.isBlank() && !existing.equals(requested)) {
+            throw new BusinessException(400, "namespace cannot be changed after creation");
+        }
+    }
+
+    /** 发布校验后的两类引用集合 */
+    private record VerifiedReferences(Set<String> externalRuleIds,
+                                      Set<String> externalFlowIds,
+                                      Set<Long> ruleDatabaseIds,
+                                      Set<Long> flowDatabaseIds) {
     }
 }
